--- a/src/assets/styles/component/_sb-offline-toast.scss
+++ b/src/assets/styles/component/_sb-offline-toast.scss
@@ -29,7 +29,7 @@
         z-index: 999;
         position: absolute;
         font-size: 2.1rem;
-        content: url('~/assets/imgs/ic_offline_white_sm.png');
+        content: url('/assets/imgs/ic_offline_white_sm.png');
         margin-left:-35px;
         font-weight: 500;
         color: $white;
@@ -99,7 +99,7 @@
         z-index: 999;
         position: absolute;
         font-size: 2.1rem;
-        content: url('~/assets/imgs/ic_offline_white_sm.png');
+        content: url('/assets/imgs/ic_offline_white_sm.png');
         margin-left:-35px;
         font-weight: 500;
         color: $white;
