--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'NotoSans';
-    src: url('~/assets/fonts/natosans/NotoSans-Regular.ttf');
+    src: url('/assets/fonts/natosans/NotoSans-Regular.ttf');
     font-weight: normal;
     font-style: normal;
   }
