--- a/src/app/content-details/content-details.page.html
+++ b/src/app/content-details/content-details.page.html
@@ -1,5 +1,5 @@
 <!-- New content details -->
-<ion-content *ngIf="content && appGlobalService?.CONTENT_STREAMING_ENABLED">
+<ion-content *ngIf="content">
   <div class="sb-play-container sb-player-container" *ngIf="commonUtilService.networkInfo.isNetworkAvailable && playerType !== 'sunbird-video-player'"
     [ngClass]="{'standalone-player-container': contentDownloadable[content?.identifier] && (content.mimeType === 'video/mp4' || content.mimeType === 'video/webm'), '': !contentDownloadable[content?.identifier]}">
     <div *ngIf="contentDownloadable[content?.identifier]">
