Ng12 and ionic 6 migration

--- a/src/app/components/confirm-alert/confirm-alert.component.scss
+++ b/src/app/components/confirm-alert/confirm-alert.component.scss
@@ -27,7 +27,7 @@
     }
 }
 
-.confirm-alert-box .popover-content {
+.confirm-alert-box::part(content) {
     margin: 0;
     width: 100vw !important;
     height: auto !important;
