--- a/src/app/components/popups/edit-contact-details-popup/edit-contact-details-popup.component.scss
+++ b/src/app/components/popups/edit-contact-details-popup/edit-contact-details-popup.component.scss
@@ -24,27 +24,6 @@
     margin-top: 15px !important;
   }
 
-  .popover-content {
-    margin: 0;
-    width: 100vw !important;
-    height: auto !important;
-    box-shadow: unset;
-    position: fixed;
-    left: 0 !important;
-    @include ltr() {
-      left: 0 !important;
-    }
-
-    @include rtl() {
-      right: 0 !important;
-    }
-
-    top: unset !important;
-    bottom: 0;
-    transform-origin: bottom -100% !important;
-    transform: translateY(0) !important;
-    overflow-y: hidden;
-  }
   ion-backdrop {
     background-color: map-get($colors, dark) !important;
     opacity: 0.4 !important;
@@ -94,4 +73,26 @@
     --border-color: #{$blue};
   }
 
+}
+
+:host::part(content) {
+  margin: 0;
+  width: 100vw !important;
+  height: auto !important;
+  box-shadow: unset;
+  position: fixed;
+  left: 0 !important;
+  @include ltr() {
+    left: 0 !important;
+  }
+
+  @include rtl() {
+    right: 0 !important;
+  }
+
+  top: unset !important;
+  bottom: 0;
+  transform-origin: bottom -100% !important;
+  transform: translateY(0) !important;
+  overflow-y: hidden;
 }
