--- a/src/app/page-filter/page-filter-options/page-filter-options.page.scss
+++ b/src/app/page-filter/page-filter-options/page-filter-options.page.scss
@@ -41,7 +41,7 @@
     color: #fff
    }
   
-  .resource-filter-options .popover-content {
+  .resource-filter-options::part(content) {
     margin: 0;
     width: 100% !important;
     max-height: 70% !important;
