--- a/src/assets/styles/component/_sb-detail-card.scss
+++ b/src/assets/styles/component/_sb-detail-card.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+@use 'sass:meta';
 @import 'src/assets/styles/_variables';
 @import 'src/assets/styles/_custom-mixins';
 /* Sb-Detail-card Component Styling */
@@ -71,7 +73,11 @@
         .sb-dt-source {
           .sb-by {
             font-size: ($font-size-base - 0.25);
-            @include margin(0, ($base-block-space/2), 0, 0);
+            @if (meta.function-exists('div', 'math')) {
+              @include margin(0, math.div($base-block-space,2), 0, 0);
+            } @else {
+              @include margin(0, ($base-block-space/2), 0, 0);
+            }
           }
           .sb-user {
             font-size: ($font-size-base - 0.125);
