--- a/src/app/enrolled-course-details-page/enrolled-course-details-page.scss
+++ b/src/app/enrolled-course-details-page/enrolled-course-details-page.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+@use 'sass:meta';
 @import 'src/assets/styles/_custom-mixins';
 @import "src/assets/styles/variables";
 @import "src/assets/styles/_variables.scss";
@@ -161,7 +163,11 @@
     }
 
     .toolbar-p-16{
-        padding: ($base-block-space * 2) ($base-block-space * 2) ($base-block-space / 2) ($base-block-space * 2) !important;
+      @if (meta.function-exists('div', 'math')) {
+        padding: ($base-block-space * 2) ($base-block-space * 2) math.div($base-block-space, 2) ($base-block-space * 2) !important;
+      } @else {
+        padding: ($base-block-space * 2) ($base-block-space * 2) ($base-block-space/2) ($base-block-space * 2) !important;
+      }
     }
 
     .size_txt {
