--- a/src/app/collection-detail-etb/collection-detail-etb.page.scss
+++ b/src/app/collection-detail-etb/collection-detail-etb.page.scss
@@ -365,7 +365,7 @@ ion-card .card .card-md {
   .rating {
     display: flex;
     justify-content: flex-end;
-    align-items: end;
+    align-items: flex-end;
   }
 
   .content {
